[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-digitalocean"
version = "1.17.0"
description = "digitalocean.com API to manage Droplets and Images"
readme = "DESCRIPTION.rst"
license = {text = "LGPL v3"}
authors = [
    { name = "Lorenzo Setale", email = "lorenzo@setale.me" }
]

dependencies = [
    "requests",
    "jsonpickle",
]

[project.urls]
Homepage = "https://github.com/koalalorenzo/python-digitalocean"
Author = "http://who.is.lorenzo.setale.me/?"

[tool.setuptools.packages.find]
include = ["digitalocean"]


